@@ -15,6 +15,7 @@
  */
 package io.micronaut.security.token.jwt.validator;
 
+import io.micronaut.http.HttpRequest;
 import io.micronaut.security.authentication.Authentication;
 import io.micronaut.security.token.jwt.encryption.EncryptionConfiguration;
 import io.micronaut.security.token.jwt.signature.SignatureConfiguration;
@@ -73,6 +74,7 @@ public class JwtTokenValidator implements TokenValidator {
      * @return Publishes {@link Authentication} based on the JWT or empty if the validation fails.
      */
     @Override
+    @Deprecated
     public Publisher<Authentication> validateToken(String token) {
         return validator.validate(token)
                 .flatMap(jwtAuthenticationFactory::createAuthentication)
