@@ -15,7 +15,9 @@
  */
 package io.micronaut.security.token.validator;
 
+import edu.umd.cs.findbugs.annotations.Nullable;
 import io.micronaut.core.order.Ordered;
+import io.micronaut.http.HttpRequest;
 import io.micronaut.security.authentication.Authentication;
 import org.reactivestreams.Publisher;
 
@@ -31,7 +33,23 @@ public interface TokenValidator extends Ordered {
      * Validates the provided token and returns the authentication state.
      *
      * @param token The token string
-     * @return The authentication or {@link java.util.Optional#empty} if the validation fails
+     * @return An authentication publisher. If the publisher emits an error, no further validators will
+     * be attempted and the validation will fail. If the publisher is empty, further validators will be
+     * attempted. If the publisher emits an authentication, that authentication will be used.
      */
+    @Deprecated
     Publisher<Authentication> validateToken(String token);
+
+    /**
+     * Validates the provided token and returns the authentication state.
+     *
+     * @param token The token string
+     * @param request The current request (or null)
+     * @return An authentication publisher. If the publisher emits an error, no further validators will
+     * be attempted and the validation will fail. If the publisher is empty, further validators will be
+     * attempted. If the publisher emits an authentication, that authentication will be used.
+     */
+    default Publisher<Authentication> validateToken(String token, @Nullable HttpRequest<?> request) {
+        return validateToken(token);
+    }
 }
