@@ -17,3 +17,5 @@ Micronaut Security {version} includes the following new features and improvement
 * It is now supported out of the box to redirect back to the prior URL after a successful login. If a user requests a URL that returns an unauthenticated response, after logging in successfully, the user can then be returned to the URL that previously returned unauthorized. This setting can be enabled with `micronaut.security.redirect.prior-to-login: true` in your configuration. It is disabled by default.
 
 * Support for using tokens directly from OpenID providers has been added. By default the information from the OpenID JWT token is used to create a new token that uses Micronaut's JWT settings. This allows for a common format across providers as well as standardized expiration. Some users may want to use the token coming from the provider directly. That is now supported with the configuration option and value `micronaut.security.authentication: idtoken`. Note that this authentication mode requires each application to implement any necessary refresh token functionality. The refresh token functionality in this library is specific to the tokens created by this library.
+
+* The TokenValidator API now has access to the current request.
